--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Rrm : ">
+    <meta name="description" content="Rapid Response Mechanism (RRM) Iraq : ">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Rrm</title>
+    <title>Rapid Response Mechanism (RRM) Iraq</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/REACHIraq/RRM">View on GitHub</a>
 
-          <h1 id="project_title">Rrm</h1>
+          <h1 id="project_title">Rapid Response Mechanism (RRM) Iraq</h1>
           <h2 id="project_tagline"></h2>
 
             <section id="downloads">
@@ -68,7 +68,7 @@ $ git checkout gh-pages
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
       <footer class="inner">
-        <p class="copyright">Rrm maintained by <a href="https://github.com/REACHIraq">REACHIraq</a></p>
+        <p class="copyright">Rapid Response Mechanism (RRM) Iraq maintained by <a href="https://github.com/REACHIraq">REACHIraq</a></p>
         <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
