--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
     <meta name="author" content="Edouard Legoupil">
-    <title>Site Assessment - CCCM Cluster Iraq</title>
+    <title>RRM - CCCM Cluster Iraq</title>
     <link rel="shortcut icon" href="images/favicon.ico" type="image/vnd.microsoft.icon" />
 
     <meta itemprop="name" content="Site Assessment - CCCM Cluster Iraq"/>
