--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@ $('#reset').on('click', function (){
 
 <div class="footer">
     <img src="images/footer.png"  alt="" />
-    <p id="copyright">Technical support by REACH ©2014</p>
+    <p id="copyright">Technical support by REACH ©2014 - Thanks to Edouard Legoupil for sharing the base code for this website. </p>
 </div>
 
 </body>
